@@ -3,11 +3,14 @@ like = function(vector, pattern)
     # Intended for use with a data.table 'where' 
     # Don't use * or % like SQL's like.  Uses regexpr syntax - more powerful.
     if (is.factor(vector)) {
-        which(as.integer(vector) %in% grep(pattern,levels(vector)))
+        as.integer(vector) %in% grep(pattern,levels(vector))
     } else {
-        # if (!is.character(vector)) stop("like searches character vector or factor").  Commented this out to leave it to regexpr to auto-coerce. So like is more similar to regexpr behaviour.
-        which(regexpr(pattern,vector)>0)
-    }    
+        # most usually character, but integer and numerics will be silently coerced by grepl
+        grepl(pattern,vector)
+    }
+    # returns 'logical' so can be combined with other where clauses.
 }
 
 "%like%" = like
+
+
